# chiptools-crc

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
chiptools_crc/: __init__.py  __main__.py  catalog.py  cli.py  crc.py  integrity.py
examples/: README.md  audit_dump.py  compute_crc.py
tests/: test_cli.py  test_crc.py
